# py-passafe

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
pypassafe/: cli.py  database.py  exceptions.py  migrations.py  vault.py
pypassafe-cli/: Pipfile
pypassafe-cli/src/: main.py
pypassafe/database/: __init__.py  database.py  my_database.py  sqlite_database.py
pypassafe/login/: __init__.py  login_1.py  login_2.py  manager.py
pypassafe_cli/: main.py
tests/database/: my_database_test.py
tests/migrations/: login_test.py
