[project]
name = "pypassafe"
version = "0.0.1"
description = "py-passafe - library for password management"
authors = [
    "Netanel Bashan <netanelb56@gmail.com>",
    "Meir Klemfner <meirk251@outlook.com>",
]
license = "MIT"
readme = "README.md"
python = "^3.8"
repository = "https://github.com/nbashan/py-passafe.git"
keywords = ["password manager", "python"]

[dependecies]

[build-system]
requires = [
	"setuptools>=56",
	"wheel"
]
build-backend = "setuptools.build_meta"